--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -9,8 +9,8 @@
 
 <div class="row">
   <div class="input-field col s12">
-    <input [(ngModel)]="usuario.senha" id="senha" type="password" class="validate">
-    <label class="active" for="senha">Senha</label>
+    <input [(ngModel)]="usuario.password" id="password" type="password" class="validate">
+    <label class="active" for="password">Senha</label>
   </div>
 </div>
 
