listagem de usuarios

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,9 @@
 
   <mat-sidenav #sidenav mode="side">
     <mat-list>
-      <mat-list-item>Item 1</mat-list-item>
+      <mat-list-item>
+        <a routerLink="/usuarios">Usuarios</a>
+      </mat-list-item>
       <mat-divider></mat-divider>
       <mat-list-item>Item 2</mat-list-item>
       <mat-divider></mat-divider>
