--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,9 @@
         <a routerLink="/usuarios">Usuarios</a>
       </mat-list-item>
       <mat-divider></mat-divider>
-      <mat-list-item>Item 2</mat-list-item>
+      <mat-list-item>
+        <a routerLink="/entidades">Entidades</a>
+      </mat-list-item>
       <mat-divider></mat-divider>
       <mat-list-item>Item 3</mat-list-item>
     </mat-list>
