--- a/src/app/components/entidade/entidade.component.html
+++ b/src/app/components/entidade/entidade.component.html
@@ -31,19 +31,47 @@
           <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
           <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
         </mat-table>
-        <mat-paginator #paginatorEntidades [pageSizeOptions]="[10, 50, 100]" [length]="dataSourceEntidade.data.length" showFirstLastButtons></mat-paginator>
+        <mat-paginator #paginatorEntidades [pageSizeOptions]="[15, 50, 100]" [length]="dataSourceEntidade.data.length" showFirstLastButtons></mat-paginator>
       </mat-card-content>
     </mat-card>
   </div>
 
-  <div *ngIf="profissoes" style="width: 20px"></div>
-  <div *ngIf="profissoes">
-    <mat-card>
-      <mat-card-title>
+  <div *ngIf="entidadeSelecionada" style="width: 20px"></div>
+
+  <div *ngIf="entidadeSelecionada" style="flex-direction: column">
+    <div>
+      <mat-card>
+        <mat-card-title>
+        <span>
+          Adicionar / Editar Entidade
+        </span>
+          <span style="float: right; padding-left: 20px">
+          <a (click)="salvarNovaEntidade()">
+            <mat-icon>save</mat-icon>
+          </a>
+          <a (click)="cancelar()">
+            <mat-icon>delete</mat-icon>
+          </a>
+        </span>
+        </mat-card-title>
+        <br/>
+
+        <mat-card-content>
+          <mat-form-field appearance="outline" style="width: 100%">
+            <mat-label>Nome</mat-label>
+            <input matInput placeholder="Nome" [(ngModel)]="entidadeSelecionada.nome">
+          </mat-form-field>
+        </mat-card-content>
+      </mat-card>
+    </div>
+    <div *ngIf="profissoes" style="height: 20px"></div>
+    <div *ngIf="profissoes">
+      <mat-card>
+        <mat-card-title>
         <span>
           Lista de Profissoes Vinculadas - {{entidadeSelecionada.nome}}
         </span>
-        <span style="float: right; padding-left: 20px">
+          <span style="float: right; padding-left: 20px">
           <a *ngIf="editandoRelacionamento()" (click)="salvarProfissoes()">
             <mat-icon>save</mat-icon>
           </a>
@@ -57,89 +85,57 @@
             <mat-icon>close</mat-icon>
           </a>
         </span>
-      </mat-card-title>
-      <br/>
+        </mat-card-title>
+        <br/>
 
-      <mat-card-content>
-        <div *ngIf="editandoRelacionamento()">
+        <mat-card-content>
+          <div *ngIf="editandoRelacionamento()">
+            <mat-table #profissoesSort="matSort" [dataSource]="dataSourceProfissao" matSort class="mat-elevation-z8">
+              <ng-container matColumnDef="id">
+                <mat-header-cell *matHeaderCellDef mat-sort-header> Id </mat-header-cell>
+                <mat-cell *matCellDef="let profissao"> {{profissao.id}} </mat-cell>
+              </ng-container>
 
-          <mat-table #profissoesSort="matSort" [dataSource]="dataSourceProfissao" matSort class="mat-elevation-z8">
-            <ng-container matColumnDef="id">
-              <mat-header-cell *matHeaderCellDef mat-sort-header> Id </mat-header-cell>
-              <mat-cell *matCellDef="let profissao"> {{profissao.id}} </mat-cell>
-            </ng-container>
+              <ng-container matColumnDef="nome">
+                <mat-header-cell *matHeaderCellDef mat-sort-header> Nome </mat-header-cell>
+                <mat-cell *matCellDef="let profissao"> {{profissao.nome}} </mat-cell>
+              </ng-container>
 
-            <ng-container matColumnDef="nome">
-              <mat-header-cell *matHeaderCellDef mat-sort-header> Nome </mat-header-cell>
-              <mat-cell *matCellDef="let profissao"> {{profissao.nome}} </mat-cell>
-            </ng-container>
+              <ng-container matColumnDef="selected">
+                <mat-header-cell *matHeaderCellDef mat-sort-header style="text-align: center"> Selecione </mat-header-cell>
+                <mat-cell *matCellDef="let profissao">
+                  <section style="width: 100%; text-align: center">
+                    <mat-checkbox [(ngModel)]="profissao.selected"></mat-checkbox>
+                  </section>
+                </mat-cell>
+              </ng-container>
 
-            <ng-container matColumnDef="selected">
-              <mat-header-cell *matHeaderCellDef mat-sort-header style="text-align: center"> Selecione </mat-header-cell>
-              <mat-cell *matCellDef="let profissao">
-                <section style="width: 100%; text-align: center">
-                  <mat-checkbox [(ngModel)]="profissao.selected"></mat-checkbox>
-                </section>
-              </mat-cell>
-            </ng-container>
+              <mat-header-row *matHeaderRowDef="['id', 'nome', 'selected']"></mat-header-row>
+              <mat-row *matRowDef="let row; columns: ['id', 'nome', 'selected'];"></mat-row>
+            </mat-table>
+            <mat-paginator #paginatorProfissoes [pageSizeOptions]="[10, 50, 100]" [length]="dataSourceProfissao.data.length" showFirstLastButtons></mat-paginator>
+          </div>
 
-            <mat-header-row *matHeaderRowDef="['id', 'nome', 'selected']"></mat-header-row>
-            <mat-row *matRowDef="let row; columns: ['id', 'nome', 'selected'];"></mat-row>
-          </mat-table>
-          <mat-paginator #paginatorProfissoes [pageSizeOptions]="[10, 50, 100]" [length]="dataSourceProfissao.data.length" showFirstLastButtons></mat-paginator>
+          <div *ngIf="!editandoRelacionamento()">
+            <mat-table #profissoesSort="matSort" [dataSource]="dataSourceProfissao" matSort class="mat-elevation-z8">
+              <ng-container matColumnDef="id">
+                <mat-header-cell *matHeaderCellDef mat-sort-header> Id </mat-header-cell>
+                <mat-cell *matCellDef="let profissao"> {{profissao.id}} </mat-cell>
+              </ng-container>
 
-        </div>
+              <ng-container matColumnDef="nome">
+                <mat-header-cell *matHeaderCellDef mat-sort-header> Nome </mat-header-cell>
+                <mat-cell *matCellDef="let profissao" > {{profissao.nome}} </mat-cell>
+              </ng-container>
 
-        <div *ngIf="!editandoRelacionamento()">
+              <mat-header-row *matHeaderRowDef="['id', 'nome']"></mat-header-row>
+              <mat-row *matRowDef="let row; columns: ['id', 'nome'];"></mat-row>
+            </mat-table>
+            <mat-paginator #paginatorProfissoes [pageSizeOptions]="[10, 50, 100]" [length]="dataSourceProfissao.data.length" showFirstLastButtons></mat-paginator>
+          </div>
+        </mat-card-content>
 
-          <mat-table #profissoesSort="matSort" [dataSource]="dataSourceProfissao" matSort class="mat-elevation-z8">
-            <ng-container matColumnDef="id">
-              <mat-header-cell *matHeaderCellDef mat-sort-header> Id </mat-header-cell>
-              <mat-cell *matCellDef="let profissao"> {{profissao.id}} </mat-cell>
-            </ng-container>
-
-            <ng-container matColumnDef="nome">
-              <mat-header-cell *matHeaderCellDef mat-sort-header> Nome </mat-header-cell>
-              <mat-cell *matCellDef="let profissao" > {{profissao.nome}} </mat-cell>
-            </ng-container>
-
-            <mat-header-row *matHeaderRowDef="['id', 'nome']"></mat-header-row>
-            <mat-row *matRowDef="let row; columns: ['id', 'nome'];"></mat-row>
-          </mat-table>
-          <mat-paginator #paginatorProfissoes [pageSizeOptions]="[10, 50, 100]" [length]="dataSourceProfissao.data.length" showFirstLastButtons></mat-paginator>
-
-        </div>
-      </mat-card-content>
-
-    </mat-card>
+      </mat-card>
+    </div>
   </div>
-
-  <div *ngIf="adicionando()" style="width: 20px"></div>
-  <div *ngIf="adicionando()">
-    <mat-card>
-      <mat-card-title>
-        <span>
-          Adicionar / Editar Entidade
-        </span>
-        <span style="float: right; padding-left: 20px">
-          <a (click)="salvarNovaEntidade()">
-            <mat-icon>save</mat-icon>
-          </a>
-          <a (click)="cancelar()">
-            <mat-icon>delete</mat-icon>
-          </a>
-        </span>
-      </mat-card-title>
-      <br/>
-
-      <mat-card-content>
-        <mat-form-field appearance="outline" style="width: 100%">
-          <mat-label>Nome</mat-label>
-          <input matInput placeholder="Nome" [(ngModel)]="entidadeSelecionada.nome">
-        </mat-form-field>
-      </mat-card-content>
-    </mat-card>
-
-  </div>
-
 </div>
