--- a/src/app/components/usuario/usuario.component.html
+++ b/src/app/components/usuario/usuario.component.html
@@ -1,29 +1,40 @@
-<table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+<mat-card>
+  <mat-card-title>
+    <span>
+      Usuarios
+    </span>
+    <span style="float: right">
+      <a (click)="adicionar()">
+        <mat-icon>add</mat-icon>
+      </a>
+    </span>
+  </mat-card-title>
+  <br/>
+  <mat-card-content>
+    <mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+      <ng-container matColumnDef="nome">
+        <mat-header-cell *matHeaderCellDef mat-sort-header> Nome </mat-header-cell>
+        <mat-cell *matCellDef="let usuario"> {{usuario.nome}} </mat-cell>
+      </ng-container>
 
-  <!-- Position Column -->
-  <ng-container matColumnDef="nome">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Nome </th>
-    <td mat-cell *matCellDef="let element"> {{element.nome}} </td>
-  </ng-container>
+      <ng-container matColumnDef="email">
+        <mat-header-cell *matHeaderCellDef mat-sort-header> Email </mat-header-cell>
+        <mat-cell *matCellDef="let usuario"> {{usuario.email}} </mat-cell>
+      </ng-container>
 
-  <!-- Name Column -->
-  <ng-container matColumnDef="email">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Email </th>
-    <td mat-cell *matCellDef="let element"> {{element.email}} </td>
-  </ng-container>
+      <ng-container matColumnDef="password">
+        <mat-header-cell *matHeaderCellDef mat-sort-header> Senha </mat-header-cell>
+        <mat-cell *matCellDef="let usuario"> {{usuario.password}} </mat-cell>
+      </ng-container>
 
-  <!-- Weight Column -->
-  <ng-container matColumnDef="password">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Password </th>
-    <td mat-cell *matCellDef="let element"> {{element.password}} </td>
-  </ng-container>
+      <ng-container matColumnDef="roles">
+        <mat-header-cell *matHeaderCellDef mat-sort-header> Roles </mat-header-cell>
+        <mat-cell *matCellDef="let usuario"> {{usuario.roles}} </mat-cell>
+      </ng-container>
 
-  <!-- Symbol Column -->
-  <ng-container matColumnDef="roles">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Roles </th>
-    <td mat-cell *matCellDef="let element"> {{element.roles}} </td>
-  </ng-container>
-
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
+      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+      <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+    </mat-table>
+    <mat-paginator [pageSizeOptions]="[15, 50, 100]" [length]="dataSource.data.length" showFirstLastButtons></mat-paginator>
+  </mat-card-content>
+</mat-card>
