--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,3 +7,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   display: flex;
   justify-content: center;
 }
+
+.mouse-pointer {
+  cursor: pointer;
+}
